navbar section done

--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
 <body>
     <header>
 
+        <!-- nav section  -->
+        
+<nav>
+   <div class="bannerLogo">
+    <img src="images/logo.png" alt="">
+   </div>
+    <div class="navItems">
+        <a href="">Menu</a> 
+        <a href="">Events</a> 
+        <a href="">Gallery</a> 
+        <a href="">About </a> 
+        <a href="">Contact</a> 
+    </div>
+    <button>Book a table</button>
+</nav>
     </header>
     <main>
-
+ 
     </main>
     <footer>
 
