--- a/index.html
+++ b/index.html
@@ -12,24 +12,49 @@
 <body>
     <header>
 
-        <!-- nav section  -->
-        
-<nav>
-   <div class="bannerLogo">
-    <img src="images/logo.png" alt="">
-   </div>
-    <div class="navItems">
-        <a href="">Menu</a> 
-        <a href="">Events</a> 
-        <a href="">Gallery</a> 
-        <a href="">About </a> 
-        <a href="">Contact</a> 
-    </div>
-    <button>Book a table</button>
-</nav>
+        <!-- navbar section  -->
+
+        <nav>
+            <div class="bannerLogo">
+                <img src="images/logo.png" alt="">
+            </div>
+            <div class="navItems">
+                <a href="">Menu</a>
+                <a href="">Events</a>
+                <a href="">Gallery</a>
+                <a href="">About </a>
+                <a href="">Contact</a>
+            </div>
+            <button>Book a table</button>
+        </nav>
     </header>
+
+    <!-- banner section  -->
+
     <main>
- 
+        <div class="banner">
+            <div class="bannerText">
+                <h3>
+                    We provide the <br>
+                    best food for you
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor incididunt <br> ut
+                    labore et dolore magna aliqua.</p>
+                <div class="bannerButtons">
+                    <button id="menu">Menu</button>
+                    <button id="bookatable">Book a Table</button>
+                </div>
+                <div class="bannerSocial">
+                    <img src="images/facebook.png" alt="">
+                    <img src="images/instagram.png" alt="">
+                    <img src="images/twitter.png" alt="">
+                </div>
+            </div>
+            <div class="bannerImg">
+                <img class="bannerimg1" src="images/banner-image-1.png" alt="">
+                <img class="bannerimg2" src="images/banner-image-2.png" alt="">
+            </div>
+        </div>
     </main>
     <footer>
 
