special dishes section done

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit, sed do eiusmod tempor incididunt <br> ut
                     labore et dolore magna aliqua.</p>
                 <div class="bannerButtons">
-                    <button id="menu">Menu</button>
-                    <button id="bookatable">Book a Table</button>
+                    <button class="menu1">Menu</button>
+                    <button class="bookatable1">Book a Table</button>
                 </div>
                 <div class="bannerSocial">
                     <img src="images/facebook.png" alt="">
@@ -53,6 +53,79 @@
             <div class="bannerImg">
                 <img class="bannerimg1" src="images/banner-image-1.png" alt="">
                 <img class="bannerimg2" src="images/banner-image-2.png" alt="">
+            </div>
+        </div>
+
+        <!-- special dishes  -->
+
+        <div class="specialDishes">
+            <div class="text">
+                <h3>Our Special Dishes</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor incididunt </p>
+            </div>
+            <div class="dishes">
+                <div class="dishes1">
+                    <div class="dishesImg">
+                        <img src="images/special-dish-1.png" alt="">
+                    </div>
+                    <div class="dishesName">
+                        <h5>Lumpia with Suace</h5>
+                    </div>
+                    <div class="dishesDescription">
+                        Lorem ipsum dolor sit , <br> consectetur adipiscing elit, <br> sed do eiusmod tempor
+                    </div>
+                </div>
+                <div class="dishes2">
+                    <div class="dishesImg">
+                        <img src="images/special-dish-2.png" alt="">
+                    </div>
+                    <div class="dishesName">
+                        <h5>Fish and Veggie</h5>
+                    </div>
+                    <div class="dishesDescription">
+                        Lorem ipsum dolor sit , <br> consectetur adipiscing elit, <br> sed do eiusmod tempor
+                    </div>
+                </div>
+                <div class="dishes3">
+                    <div class="dishesImg">
+                        <img src="images/special-dish-3.png" alt="">
+                    </div>
+                    <div class="dishesName">
+                        <h5>Tofu Chili</h5>
+                    </div>
+                    <div class="dishesDescription">
+                        Lorem ipsum dolor sit , <br> consectetur adipiscing elit, <br> sed do eiusmod tempor
+                    </div>
+                </div>
+                <div class="dishes4">
+                    <div class="dishesImg">
+                        <img src="images/special-dish-4.png" alt="">
+                    </div>
+                    <div class="dishesName">
+                        <h5>Egg and Cocumber</h5>
+                    </div>
+                    <div class="dishesDescription">
+                        Lorem ipsum dolor sit , <br> consectetur adipiscing elit, <br> sed do eiusmod tempor
+                    </div>
+                </div>
+            </div>
+
+            <!-- welcome section  -->
+
+            <div class="welcome">
+                <img src="images/dishes image.png" alt="">
+                <div class="welcomeDescription">
+                    <h3>
+                        Welcome to Our<br>Restaurant
+                    </h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor incididunt
+                        <br>
+                        ut labore et dolore magna aliqua.</p>
+                    <div class="welcomeButton">
+                        <button class="menu2">Menu</button>
+                        <button class="bookatable2">Book a table</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
