expects chef section done

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                     </h3>
                     <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor incididunt
                         <br>
-                        ut labore et dolore magna aliqua.</p>
+                        ut labore et dolore magna aliqua.
+                    </p>
                     <div class="welcomeButton">
                         <button class="menu2">Menu</button>
                         <button class="bookatable2">Book a table</button>
@@ -128,8 +129,97 @@
                 </div>
             </div>
         </div>
+
+        <!-- expects chef section  -->
+
+        <div class="expectsChef">
+            <div class="chefDescription">
+                <h3>Our Expects Chef</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor incididunt <br>
+                    ut labore et dolore magna aliqua.</p>
+                <div class="checkPoint">
+                    <div class="check">
+                        <div class="checkPoints">
+                            <div class="checkPoints1">
+                                <img src="images/check.png" alt="">
+                                <div class="checkDescription1">
+                                    <p>Lorem ipsum dolor sit amet, <br> consectetur </p>
+                                </div>
+                            </div>
+                            <div class="checkPoints2">
+                                <img src="images/check.png" alt="">
+                                <div class="checkDescription2">
+                                    <p>Lorem ipsum dolor sit amet, <br> consectetur </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="check">
+                        <div class="checkPoints">
+                            <div class="checkPoints1">
+                                <img src="images/check.png" alt="">
+                                <div class="checkDescription1">
+                                    <p>Lorem ipsum dolor sit amet, <br> consectetur </p>
+                                </div>
+                            </div>
+                            <div class="checkPoints2">
+                                <img src="images/check.png" alt="">
+                                <div class="checkDescription2">
+                                    <p>Lorem ipsum dolor sit amet, <br> consectetur </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="check">
+                        <div class="checkPoints">
+                            <div class="checkPoints1">
+                                <img src="images/check.png" alt="">
+                                <div class="checkDescription1">
+                                    <p>Lorem ipsum dolor sit amet, <br> consectetur </p>
+                                </div>
+                            </div>
+                            <div class="checkPoints2">
+                                <img src="images/check.png" alt="">
+                                <div class="checkDescription2">
+                                    <p>Lorem ipsum dolor sit amet, <br> consectetur </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="chefSectionButton">
+                    <button class="menu3">Menu</button>
+                    <button class="bookatable3">Book a table</button>
+                </div>
+            </div>
+            <img src="images/chef.png" alt="">
+        </div>
     </main>
     <footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </footer>
 </body>
