happy customer & subscribe section done

--- a/index.html
+++ b/index.html
@@ -194,6 +194,63 @@
             </div>
             <img src="images/chef.png" alt="">
         </div>
+
+        <!-- happy customer section  -->
+
+        <div class="happyCustomer">
+            <h3>Our Happy Customers</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+            <div class="customerReviews">
+                <div class="reviews1">
+                    <img class="reviewImg" src="images/Image.png" alt="">
+                    <div class="review">
+                        <div class="star">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur. Tortor massa nisl quam sit. Vitae congue ultrices
+                            neque penatibus mi in quisque. Leo in cursus enim magnis ante. Proin iaculis platea ipsum
+                            sagittis ac eu aliquam quis. Ornare tincidunt tempus semper
+                        </p>
+                        <h5>Kawser Alam</h5>
+                        <h6>CEO & Founder Inc </h6>
+                    </div>
+                </div>
+                <div class="reviews2">
+                    <img class="reviewImg" src="images/Image.png" alt="">
+                    <div class="review">
+                        <div class="star">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                            <img src="images/star.png" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur. Tortor massa nisl quam sit. Vitae congue ultrices
+                            neque penatibus mi in quisque. Leo in cursus enim magnis ante. Proin iaculis platea ipsum
+                            sagittis ac eu aliquam quis. Ornare tincidunt tempus semper
+                        </p>
+                        <h5>Kawser Alam</h5>
+                        <h6>CEO & Founder Inc </h6>
+                    </div>
+                </div>
+            </div>
+            <img class="dot" src="images/Dot.png" alt="">
+
+            <!-- subscribe section  -->
+
+            <div class="subscribeSec">
+                <h3>Get Or Promo Code by <br>
+                    Subscribing To our Newsletter</h3>
+                <div class="subsText">
+                    <input class="email" type="text" value="Enter your email">
+                    <button class="subscribe">Subscribe</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
