footer section done

--- a/index.html
+++ b/index.html
@@ -252,32 +252,61 @@
             </div>
         </div>
     </main>
+
+    <!-- footer section  -->
+
     <footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="footer">
+            <div class="footerLogoText">
+                <img src="images/logo.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore . <u>Learn more</u> </p>
+                <h6>OPENING HOURS</h6>
+                <div class="openTime">
+                    <div class="t1">
+                        <p>Monday - Friday <br>
+                            8:00 am to 9:00 pm</p>
+                    </div>
+                    <div class="t2">
+                        Saturday <br>
+                        8:00 am to 9:00 pm
+                    </div>
+                    <div class="t3">
+                        Sunday <br>
+                        CLOSED
+                    </div>
+                </div>
+            </div>
+            <div class="items">
+                <h5>NAVIGATION</h5>
+                <p>Menu</p>
+                <p>About us</p>
+                <p>Contact us</p>
+                <p>Main dishes</p>
+            </div>
+            <div class="items">
+                <h5>DISHES</h5>
+                <p>Fish & Viggies</p>
+                <p>Tofu CHill</p>
+                <p>Egg & Cocumber</p>
+                <p>Lumpia w/Suace</p>
+            </div>
+            <div class="followUs">
+                <h5>FOLLOW US</h5>
+                <div class="followIcon">
+                    <img src="images/facebook.png" alt="">
+                    <img src="images/instagram.png" alt="">
+                    <img src="images/twitter.png " alt="">
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="copyright">
+            <img src="images/copyright.png" alt="">
+            <p id="p1">2024 Restaurants. All Right Reserved. Designed by <b>Kawser Alam</b></p>
+            <p>Terms of Service</p>
+            <p>Privacy Policy</p>
+        </div>
     </footer>
 </body>
 
